welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:15: error: value =< is not a member of Int
		case i if i =< 2 => droite
                            ^